--- a/help-center.mdx
+++ b/help-center.mdx
@@ -4,26 +4,32 @@ title: Help Center
 
 <Columns cols={2}>
   <Card title="FAQs" icon="help-circle" href="/help-center/faq/getting-started-authentication" horizontal>
-    Common Haltman questions.
+    Common questions about tools and services.
   </Card>
   <Card title="Troubleshooting" icon="alert-triangle" href="/help-center/troubleshooting/missing-docs" horizontal>
-    Fix Haltman issues in seconds.
+    Fix common issues quickly.
   </Card>
   <Card title="Guides" icon="book-open" href="/help-center/guides/create-project-space" horizontal>
-    Quick project setup.
+    Step-by-step guides.
   </Card>
   <Card title="Changelog" icon="clock" href="/changelog" horizontal>
-    Recent changes.
+    Recent releases and updates.
   </Card>
 </Columns>
 
-## Contact Support
+## Contact & Support
 
 <Columns cols={2}>
-  <Card title="Email Support" icon="mail" href="mailto:help@haltman.com">
-    Usually replies in one business day.
+  <Card title="Email" icon="mail" href="mailto:root@haltman.io">
+    root@haltman.io — general inquiries.
   </Card>
-  <Card title="Community" icon="users" href="https://community.haltman.com" target="_blank">
-    Join the Haltman forum.
+  <Card title="Security" icon="shield" href="mailto:security@haltman.io">
+    security@haltman.io — vulnerability reports.
+  </Card>
+  <Card title="Telegram" icon="message-circle" href="https://t.me/haltman_group" target="_blank">
+    Join the Haltman.io community group.
+  </Card>
+  <Card title="GitHub" icon="github" href="https://github.com/haltman-io" target="_blank">
+    Open issues and contributions.
   </Card>
 </Columns>
